--- a/Autobus/View/YolcuDüzenView.xaml
+++ b/Autobus/View/YolcuDüzenView.xaml
@@ -1,12 +1,18 @@
-﻿<UserControl x:Class="Autobus.View.YolcuDüzenView"
+﻿<UserControl 
+    x:Class="Autobus.View.YolcuDüzenView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Extensions="clr-namespace:Extensions;assembly=Extensions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Autobus.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:model="clr-namespace:Autobus.Model"
+    xmlns:model="clr-namespace:Autobus.Model" xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
+    d:DataContext="{d:DesignInstance Type={x:Type viewmodel:YolcuDüzenViewModel}}"
     d:DesignHeight="450" d:DesignWidth="800" UseLayoutRounding="True"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <Extensions:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+    </UserControl.Resources>
     <Grid>
         <GroupBox Header="YOLCU DÜZENİ">
             <Grid>
@@ -21,7 +27,7 @@
                         ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
                         ItemsSource="{Binding Otobüs.Sefer, Source={StaticResource MainViewModel}}">
                         <ComboBox.ItemContainerStyle>
-                            <Style TargetType="ComboBoxItem">
+                            <Style TargetType="{x:Type ComboBoxItem}">
                                 <Style.Triggers>
                                     <DataTrigger Binding="{Binding VarışZamanı, Converter={StaticResource SeferSüreGeçtiConverter}}" Value="true">
                                         <Setter Property="IsEnabled" Value="False" />
@@ -36,10 +42,10 @@
                         ItemTemplate="{StaticResource AraçTemplate}"
                         ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
                         ItemsSource="{Binding Otobüs.Araçlar.Araç, Source={StaticResource MainViewModel}}"
-                        SelectedValue="{Binding ElementName=CbSefer, Path=SelectedItem.AraçId}"
+                        SelectedValue="{Binding SelectedItem.AraçId, ElementName=CbSefer}"
                         SelectedValuePath="Id" />
                 </StackPanel>
-                <Grid Grid.Row="1" DataContext="{Binding ElementName=CbAraç, Path=SelectedItem}">
+                <Grid Grid.Row="1" DataContext="{Binding SelectedItem, ElementName=CbAraç}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition />
@@ -70,11 +76,21 @@
                                         <DataTemplate>
                                             <StackPanel Width="75" Height="75"
                                                 Background="Red">
-                                                <TextBlock HorizontalAlignment="Center"
-                                                    Foreground="White"
-                                                    Text="{Binding Mode=OneWay}" />
-                                                <Border HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                    d:DataContext="{d:DesignInstance Type=model:Müşteri}">
+                                                <TextBlock HorizontalAlignment="Center" Visibility="{Binding DataContext, ConverterParameter=reverse, Converter={StaticResource NullToVisibilityConverter}, ElementName=Bd}">
+                                                    <Hyperlink Command="{Binding YolcuDüzenViewModel.MüşteriEkleEkranı, Mode=OneWay, Source={StaticResource MainViewModel}}">
+                                                        <Hyperlink.CommandParameter>
+                                                            <MultiBinding Converter="{StaticResource CloneConverter}">
+                                                                <Binding Source="{StaticResource MainViewModel}" />
+                                                                <Binding Mode="OneWay" />
+                                                                <Binding ElementName="CbSefer" Path="SelectedItem" />
+                                                                <Binding ElementName="CbAraç" Path="SelectedItem" />
+                                                            </MultiBinding>
+                                                        </Hyperlink.CommandParameter>
+                                                        <Run Text="{Binding Mode=OneWay}" />
+                                                    </Hyperlink></TextBlock>
+                                                <Border x:Name="Bd"
+                                                    HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                    d:DataContext="{d:DesignInstance Type={x:Type model:Müşteri}}">
                                                     <Border.DataContext>
                                                         <MultiBinding Converter="{StaticResource KoltukNoMüşteriConverter}">
                                                             <Binding Mode="OneWay" />
@@ -82,15 +98,11 @@
                                                         </MultiBinding>
                                                     </Border.DataContext>
                                                     <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                        FontSize="14">
-                                                        <Run Foreground="White" Text="{Binding Ad}" />
-                                                        <LineBreak />
-                                                        <Run Foreground="White" Text="{Binding Soyad}" />
+                                                        FontSize="14" Foreground="White">
                                                         <TextBlock.ToolTip>
-                                                            <Image Width="256" Height="256"
+                                                            <Image MaxWidth="256" MaxHeight="256"
                                                                 Source="{Binding Resim, Converter={StaticResource FilePathMergeConverter}}" />
-                                                        </TextBlock.ToolTip>
-                                                    </TextBlock>
+                                                        </TextBlock.ToolTip><Run Text="{Binding Ad}" /><LineBreak /><Run Text="{Binding Soyad}" /></TextBlock>
                                                 </Border>
                                             </StackPanel>
                                         </DataTemplate>
