--- a/Autobus/View/YolcuGirişView.xaml
+++ b/Autobus/View/YolcuGirişView.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
     d:DataContext="{d:DesignInstance Type={x:Type viewmodel:YolcuGirişViewModel}}"
-    d:DesignHeight="600" d:DesignWidth="800"
+    d:DesignHeight="600" d:DesignWidth="1024"
     mc:Ignorable="d">
     <Grid>
         <GroupBox Header="YOLCU İŞLEMLERİ">
@@ -118,23 +118,26 @@
                                 <Extensions:NumericUpDownControl Maximum="1000" Minimum="0"
                                     Value="{Binding ÜrünFiyat, UpdateSourceTrigger=PropertyChanged}" />
                                 <Button Command="{Binding YolcuGirişViewModel.ÜrünEkle, Mode=OneWay, Source={StaticResource MainViewModel}}"
-                                    CommandParameter="{Binding Otobüs.Ürünler.Ürün, Source={StaticResource MainViewModel}}"
+                                    CommandParameter="{Binding Otobüs.Ürünler, Source={StaticResource MainViewModel}}"
                                     Content="EKLE" />
                             </StackPanel>
                         </GroupBox>
                         <GroupBox Header="ÜRÜN SAT">
-                            <ListBox d:ItemsSource="{d:SampleData ItemCount=5}"
+                            <ListBox HorizontalContentAlignment="Stretch"
+                                d:ItemsSource="{d:SampleData ItemCount=5}"
                                 ItemsSource="{Binding Otobüs.Ürünler.Ürün, Source={StaticResource MainViewModel}}"
                                 SelectedItem="{Binding SeçiliÜrün}">
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
-                                        <StackPanel Orientation="Horizontal">
+                                        <Grid>
                                             <TextBlock VerticalAlignment="Center">
                                                 <Run Text="{Binding ÜrünAçıklama}" />
                                                 <Run Language="tr-tr" Text="{Binding ÜrünFiyat, StringFormat=\{0:C\}}" />
                                             </TextBlock>
-                                            <Button Command="{Binding YolcuGirişViewModel.MüşteriSiparişEkle, Mode=OneWay, Source={StaticResource MainViewModel}}" Content="ÜRÜN SAT" />
-                                        </StackPanel>
+                                            <Button HorizontalAlignment="Right"
+                                                Command="{Binding YolcuGirişViewModel.MüşteriSiparişEkle, Mode=OneWay, Source={StaticResource MainViewModel}}"
+                                                Content="ÜRÜN SAT" />
+                                        </Grid>
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
                             </ListBox>
